Version 6.0 alpha: (27 Feb 2004)
	* *.pl:
	   - All files now use perl's strict mode, which should mean our code
	     is absolutely perfect. :P
	* config.default.ini:
	   - We now use a plain text file (not a script file) for configuration
	     this is safer because no one can break the bot by putting bad
	     code in the config file.
	* plugins/error.pl:
	   - the %list command is now in the error plugin instead of directly
	     inside the main script.

Version 6.0 alpha: (26 Feb 2004)
	* simbot.pl:
	   - Added a new configuration option that allows you to change the
	     prefix that the bot will use to recognize commands.  The default
	     will remain as %.
	* plugins/dice.pl:
	   - It is now possible to flip more than 1 coin at a time.

Version 6.0 alpha: (25 Feb 2004)
	* simbot.pl:
	   - Plugins now register their callbacks with references to functions
	     instead of a string representing the functions name.  This keeps
	     us from having to care about what package the plugin is in, so
	     long as it's got a function we can talk to, and we no longer
	     need to define separate packages for separate commands in a
	     single plugin.

Version 6.0 alpha: (23 Feb 2004)
	* plugins/info.pl:
	   - Infobot style sentence learning. Tries to learn x (is/are) y
	     from chat it sees or explicit setting with %info.
	     Factoid retrieval is only through %info currently.

Version 6.0 alpha: (20 Feb 2004)
	* plugins/dict.pl:
	   - New plugin allows users to request definitions using the DICT
	     protocol from several different databases.  At the moment, we
	     are defaulting to use Jargon, but this could change.

version 6.0 alpha: (19 Feb 2004)
	* simbot.pl:
	   - Introduced send_message, send_action, and send_notice to replace
	     calling the POE::Kernel directly whenever we send a message.
	     This means we now get a chance to log things that the bot is
	     going to say.
	   - Added events event_*_out that are fired for plugins wanting to