@@ -81,6 +81,13 @@ pass=
 # 100% will annoy users waiting several minutes for replies.
 new_sentence_chance=10
 
+# This sets the maximum number of uses a word can have before you can
+# no longer delete it.  If you set this to 0, the user will be able
+# to delete any word that has ever been seen.  This is possible, but
+# generally a pretty bad idea.  Set this to -1 to disable the delete
+# command entirely.
+delete_usage_max=5
+
 # The bot will use one of these greetings when a user greets it with the
 # word "Hi."  The user's nickname is appended to the end of the message.
 
